Prevent image overflow

--- a/src/scss/components/_post-formatting.scss
+++ b/src/scss/components/_post-formatting.scss
@@ -98,6 +98,7 @@
     display: flex;
     margin: 0 auto;
     margin-bottom: var(--margin);
+    max-width: 100%;
     text-align: center;
   }
 }
